<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lecture_nine.LectureNineFragment"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lecture_nine_intro"
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/lecture_nine_intro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:background="#1E009688">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    style="@style/TextAppearance.MdcTypographyStyles.Body1"
                    android:text="@string/lecture_nine_register_screen_text"/>

                <EditText
                    android:id="@+id/lecture_nine_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/lecture_nine_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/lecture_nine_register_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/lecture_nine_register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/register" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#19FFEB3B"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MdcTypographyStyles.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lecture_nine_login_screen"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/lecture_nine_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/lecture_nine_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/lecture_nine_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/login" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:background="#2300E4FF">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"
                    style="@style/TextAppearance.MdcTypographyStyles.Body1"
                    android:text="@string/lecture_nine_profile_screen"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.MdcTypographyStyles.Body1"
                        android:text="@string/profile_is_the_user_logged_in"
                        android:layout_marginStart="16dp"
                        android:layout_weight="0.5"/>

                    <TextView
                        android:id="@+id/lecture_nine_profile_logged_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes_no"
                        android:layout_weight="0.5"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.MdcTypographyStyles.Body1"
                        android:text="@string/lecture_nine_user_id"
                        android:layout_marginStart="16dp"
                        android:layout_weight="0.5"/>

                    <TextView
                        android:id="@+id/lecture_nine_profile_user_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/none"
                        android:layout_weight="0.5"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.MdcTypographyStyles.Body1"
                        android:text="@string/profile_user_email"
                        android:layout_marginStart="16dp"
                        android:layout_weight="0.5"/>

                    <TextView
                        android:id="@+id/lecture_nine_profile_user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:layout_weight="0.5"/>

                </LinearLayout>

                    <Button
                        android:id="@+id/lecture_nine_profile_logout_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/log_out"
                        android:layout_marginBottom="16dp"
                        android:layout_gravity="center"/>




            </LinearLayout>



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>