<resources>
    <string name="app_name">Rasmussen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_info">Info</string>

    <string name="menu_lecture_one">Introduction &amp; Layouts</string>
    <string name="menu_lecture_two">Activities &amp; Resources</string>
    <string name="menu_lecture_three">Intents &amp; Fragments</string>
    <string name="menu_lecture_four">User Experience</string>
    <string name="menu_lecture_five">RecyclerViews</string>
    <string name="menu_lecture_six">Application Architecture</string>
    <string name="menu_lecture_seven">Local Data Storage</string>
    <string name="menu_lecture_eight">Networking</string>
    <string name="menu_lecture_nine">Google Services</string>
    <string name="menu_lecture_ten">Testing &amp; Publishing</string>
    <string name="menu_home">Home</string>
    <string name="lectures">Lectures</string>
    <string name="home_introduction_start">Hello and welcome to the AND1 Exam Application called the Rasmussen.</string>
    0
    <string name="home_introduction_end">Please select a lecture from the Navigation drawer to get started.</string>
    <string name="pokemon">And here\'s a pokemon that you like.</string>
    <string name="lecture_one_intro">In the first lecture we learned about Layouts, Views, and basic components.</string>
    <string name="lecture_one_example">For example:</string>
    <string name="lecture_one_button">here is a button</string>
    <string name="lecture_one_frame_layout">Here is a TextView inside of a FrameLayout</string>
    <string name="lecture_one_layout_weight">Below is a LinearLayout with two ImageViews that have a set weight of 1 and 2.</string>
    <string name="lecture_one_constraint_start">This is a constraint layout</string>
    <string name="lecture_one_constraint_end">I do not like them that much, so i rarely use them.</string>
    <string name="lecture_one_end">And those were the main things we learnt in the first lecture.</string>
    <string name="lecture_two_intro">In the Second Lecture we learnt a lot of theory about stuff like activities, linking XML with
        code, resources, localization, icons, styles, themes and etc. \n \n This is a button that shows a Toast, and sets its name to the text provided in the EditText field. It also writes a Log message. </string>
    <string name="lecture_two_button">Button</string>
    <string name="lecture_two_button_hint">Enter desired button text</string>
    <string name="lecture_two_progress_bar_text">Here is a progress bar you can play around with</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="lecture_two_icon_style_text">By clicking the button below, you can change the style of this text and the icon of the button</string>
    <string name="lecture_two_outro">And this lecture reacts to orientation changes.  \n\n   That is it for the second lecture.</string>
    <string name="lecture_three_intro">In the third lecture we learnt about Intents and Fragments. Since this is a single Activity application, it does not make sense to have more, but for demonstration purposes, click the button below to go to another Activity.</string>
    <string name="lecture_three_launch_button">To Second activity</string>
    <string name="lecture_three_sending_data">You can also send some data to the Activity, for example anything you enter in the field below.</string>
    <string name="lecture_three_activity_response">Here you can see responses from the second Activity:\n</string>
    <string name="lecture_three_activity_intro">Welcome to another Activity, brought to you by Explicit intents. Below, you can see what you sent from the previous fragment.</string>
    <string name="lecture_three_received_text">You did not send anything :(</string>
    <string name="lecture_three_send_back_text">You can also send stuff back.</string>
    <string name="lecture_three_activity_hint">Enter what to send back</string>
    <string name="lecture_three_fragment_hint">Enter what you want to send</string>
    <string name="lecture_three_activity_return">Reply and return</string>
    <string name="lecture_three_email_intro">Now we can do an implicit intent like send an email.</string>
    <string name="lecture_three_receiver">Receiver</string>
    <string name="lecture_three_subject">Subject</string>
    <string name="lecture_three_message">Message</string>
    <string name="lecture_three_send">Send</string>
    <string name="lecture_three_outro">We also learnt a lot about fragments in this lecture and they are used trough out the entire application.</string>
    <string name="the_rasmussen">The Rasmussen</string>
    <string name="surely_enough_for_a_pass_right">Surely enough for a pass, right?</string>
    <string name="example_text">Example text</string>
    <string name="lecture_five_intro">In this lecture the main takeaway was using the recycler views, so below we have a list with hex codes and their color, implemented using a RecyclerView.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="lecture_nine_intro">In the lecture about Google Services we mainly learnt about various Firebase functionality. \n Here we have a register and login screen for handling clients implemented using Firebase Authentication.</string>
    <string name="lecture_nine_register_screen_text">Register Screen</string>
    <string name="login">Login</string>
    <string name="lecture_nine_login_screen">Login Screen</string>
    <string name="lecture_nine_profile_screen">Profile Screen</string>
    <string name="lecture_nine_user_id">User ID:</string>
    <string name="none">none</string>
    <string name="log_out">Log out</string>
    <string name="profile_user_email">User email:</string>
    <string name="profile_is_the_user_logged_in">Is the user logged in? :</string>
    <string name="yes_no">yes/no</string>
    <string name="lecture_seven_intro">In this lecture we learnt bout storing data locally using SharedPreferences and the Room library.</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="blank">Blank</string>
    <string name="lecture_seven_shared_preferences">Select a color for this TextView, it will be saved in the shared preferences.</string>
    <string name="lecture_seven_room_intro">Your choices will be saved in the local database using the Room library and displayed below.</string>
    <string name="room">Room</string>
    <string name="previously_selected">Previously Selected:</string>
    <string name="clear_list">Clear List</string>
    <string name="lecture_eight_intro">In this lecture, we leaned how to consume web apis.  \n\n  Click the button below to get a dad joke from the dad joke api.</string>
    <string name="place_for_dad_jokes">Place for dad jokes</string>
    <string name="dad_joke_plz">Dad joke plz</string>
    <string name="lecture_four_intro">In this lecture we learnt about many of the components that improve the user experience in your application.  \n\n  Some of these components are already used in the application for example the Navigation Drawer. \n\n For presentation purposes in this fragment we also have a SnackBar and a Fab that navigates to a random other lecture using the Android Navigation.  </string>
    <string name="snackbar">SnackBar</string>
    <string name="lecture_six_intro">In this lecture we learnt about using MVVM and live data which is used in the Local Data Storage and Networking lectures.</string>
    <string name="lecture_six_meme">We\'ve seen a lot of functionality so have a meme instead</string>
    <string name="lecture_ten_intro">In the testing lecture we learned how to test our application. Unfortunately android apps do not have much business logic to test  \n\n To solve this problem I have implemented a simple calculator class which can be easily tested by using JUnit \n\n   There are also two recorded Espresso tests that check the functionality of the register and the login in the Google Services. They behave as expected but still fail due to Espresso being a total pile of garbage</string>
    <string name="lecture_ten_outro">This lecture concludes The Rasmussen android application, hope you have enjoyed hand hopefully enough requirements are met for me to pass the exam.   \n\n And now you may press the button below to close the application</string>
    <string name="bye_bye">Bye Bye</string>
</resources>
